--- a/public/web_assets/assets/css/owl.video.play.html
+++ b/public/web_assets/assets/css/owl.video.play.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 2.0//EN">
 <html>
-<!-- Mirrored from myfortuelife.com/web_assets/assets/css/owl.video.play.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 10 Sep 2024 07:17:10 GMT -->
+<!-- Mirrored from mystartup.info/web_assets/assets/css/owl.video.play.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 10 Sep 2024 07:17:10 GMT -->
 <head>
 <title>404 Not Found</title>
 </head><body>
 <h1>Not Found</h1>
 <p>The requested URL was not found on this server.</p>
 </body>
-<!-- Mirrored from myfortuelife.com/web_assets/assets/css/owl.video.play.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 10 Sep 2024 07:17:10 GMT -->
+<!-- Mirrored from mystartup.info/web_assets/assets/css/owl.video.play.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 10 Sep 2024 07:17:10 GMT -->
 </html>
